--- a/index.html
+++ b/index.html
@@ -1,243 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <title>Tryn Maps</title>
+  <title>Tryn Maps</title>
 
-    <!-- Bootstrap Core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap Core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom Fonts -->
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+  <!-- Custom Fonts -->
+  <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet"
+    type="text/css">
 
-    <!-- Custom CSS -->
-    <link href="css/stylish-portfolio.css" rel="stylesheet">
+  <!-- Custom CSS -->
+  <link href="css/stylish-portfolio.css" rel="stylesheet">
 
-  </head>
+</head>
 
-  <body>
+<body>
 
-    <!-- Header -->
-    <header class="header" id="top">
-      <div class="text-vertical-center">
-      </div>
-    </header>
+  <!-- Header -->
+  <header class="header" id="top">
+    <div class="text-vertical-center">
+    </div>
+  </header>
 
-    <!-- About -->
-    <section id="about" class="about">
-      <div class="container text-center">
-        <h2>Optimize the way transit is operated and planned</h2>
-		  <p class="lead">Increase the mobility and quality of life of your customers. </p>
-      </div>
-      <!-- /.container -->
-    </section>
+  <!-- About -->
+  <section id="about" class="about">
+    <div class="container text-center">
+      <h2>Optimize the way transit is operated and planned</h2>
+      <p class="lead">Increase the mobility and quality of life of your customers. </p>
+    </div>
+    <!-- /.container -->
+  </section>
 
-    <!-- Services -->
-    <section id="services" class="services bg-primary text-white">
-      <div class="container">
-        <div class="row text-center">
-          <div class="col-lg-10 mx-auto">
-            <h2>Our Services</h2>
-            <hr class="small">
-            <div class="row">
-              <div class="col-md-3 col-sm-6">
-                <div class="service-item">
-                  <span class="fa-stack fa-4x">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-cloud fa-stack-1x text-primary"></i>
-                  </span>
-                  <h4>
-                    <strong>Service Name</strong>
-                  </h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                  <a href="#" class="btn btn-light">Learn More</a>
-                </div>
-              </div>
-              <div class="col-md-3 col-sm-6">
-                <div class="service-item">
-                  <span class="fa-stack fa-4x">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-compass fa-stack-1x text-primary"></i>
-                  </span>
-                  <h4>
-                    <strong>Service Name</strong>
-                  </h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                  <a href="#" class="btn btn-light">Learn More</a>
-                </div>
-              </div>
-              <div class="col-md-3 col-sm-6">
-                <div class="service-item">
-                  <span class="fa-stack fa-4x">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-flask fa-stack-1x text-primary"></i>
-                  </span>
-                  <h4>
-                    <strong>Service Name</strong>
-                  </h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                  <a href="#" class="btn btn-light">Learn More</a>
-                </div>
-              </div>
-              <div class="col-md-3 col-sm-6">
-                <div class="service-item">
-                  <span class="fa-stack fa-4x">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-shield fa-stack-1x text-primary"></i>
-                  </span>
-                  <h4>
-                    <strong>Service Name</strong>
-                  </h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                  <a href="#" class="btn btn-light">Learn More</a>
-                </div>
-              </div>
-            </div>
-            <!-- /.row (nested) -->
-          </div>
-          <!-- /.col-lg-10 -->
-        </div>
-        <!-- /.row -->
-      </div>
-      <!-- /.container -->
-    </section>
+  <!-- Services -->
+  <section id="services" class="services bg-primary text-white">
+    <div class="container">
 
-    <!-- Callout -->
-    <aside class="callout">
-      <div class="text-vertical-center">
-        <h1>Vertically Centered Text</h1>
-      </div>
-    </aside>
+      <table cellpadding="10">
+        <tr>
+          <th>
+            <h2>Feature</h2>
+          </th>
+          <th>
+            <h2>Operations Use-Case</h2>
+            <p>Real-time visualizations provide more context and data to supervisors as to make quick and informed decisions.</p>
+          </th>
+          <th>
+            <h2>Planning Use-Case</h2>
+            <p>Visualizations based on real-time data provide the insights needed to deliver more impact at a lower cost.</p>
+          </th>
+        </tr>
+        <tr>
+          <th>
+            <h4>Visualize differences between scheduled and actual service</h4>
+          </th>
+          <th>
+            <p>Measure severity as to respond accordingly</p>
+            <p>Alert when large service-gaps arise</p>
+          </th>
+          <th>
+            <p>Adjust schedules to reflect reality</p>
+            <p>Measure which schedules performed best</p>
+          </th>
+        </tr>
+        <tr>
+          <th>
+            <h4>Visualize travel times between any two stops</h4>
+          </th>
+          <th>
+            <p>Alert when large connection times arise</p>
+            <p>Measure impact of service disruptions and respond accordingly</p>
+          </th>
+          <th>
+            <p>Simulate commutes from first to last stop</p>
+            <p>Review recovery from service disruptions</p>
+          </th>
+        </tr>
+        <tr>
+          <th>
+            <h4>Visualize vehicle travel speeds</h4>
+          </th>
+          <th>
+            <p>Alert when vehicle is moving unusually slowly</p>
+            <p>Deploy traffic enforcement to bottlenecks in transit-priority lanes</p>
+          </th>
+          <th>
+            <p>Identify bottlenecks and determine extensiveness of measures</p>
+            <p>Review effectiveness of transit priority measures</p>
+          </th>
+        </tr>
+        <tr>
+          <th />
+          <th>
+            <h2>With Fare-System Integration</h2>
+          </th>
+          <th />
+        </tr>
+        <tr>
+          <th>
+            <h4>Visualize crowding levels</h4>
+          </th>
+          <th>
+            <p>Alert when a vehicle is too crowded</p>
+            <p>Alert when an unusually large number of boardings takes place</p>
+          </th>
+          <th>
+            <p>Adjust schedules as to closely match demand</p>
+            <p>Determine where to short-turn vehicles</p>
+          </th>
+        </tr>
+        <tr>
+          <th>
+            <h4>Visualize end-to-end trips</h4>
+          </th>
+          <th>
+            <p>Set alerts for popular connection points</p>
+          </th>
+          <th>
+            <p>Quantify impact of new or modified routes on overall crowding levels and individual travel times</p>
+          </th>
+        </tr>
+      </table>
+    </Section>
+  <!-- Call to Action <a href="#" class="btn btn-lg btn-light">Click Me!</a> -->
 
-    <!-- Portfolio -->
-    <section id="portfolio" class="portfolio">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-10 mx-auto text-center">
-            <h2>Our Work</h2>
-            <hr class="small">
-            <div class="row">
-              <div class="col-md-6">
-                <div class="portfolio-item">
-                  <a href="#">
-                    <img class="img-portfolio img-fluid" src="img/portfolio-1.jpg">
-                  </a>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="portfolio-item">
-                  <a href="#">
-                    <img class="img-portfolio img-fluid" src="img/portfolio-2.jpg">
-                  </a>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="portfolio-item">
-                  <a href="#">
-                    <img class="img-portfolio img-fluid" src="img/portfolio-3.jpg">
-                  </a>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="portfolio-item">
-                  <a href="#">
-                    <img class="img-portfolio img-fluid" src="img/portfolio-4.jpg">
-                  </a>
-                </div>
-              </div>
-            </div>
-            <!-- /.row (nested) -->
-            <a href="#" class="btn btn-dark">View More Items</a>
-          </div>
-          <!-- /.col-lg-10 -->
-        </div>
-        <!-- /.row -->
-      </div>
-      <!-- /.container -->
-    </section>
-
-    <!-- Call to Action -->
-    <aside class="call-to-action bg-primary text-white">
-      <div class="container text-center">
-        <h3>The buttons below are impossible to resist.</h3>
-        <a href="#" class="btn btn-lg btn-light">Click Me!</a>
-        <a href="#" class="btn btn-lg btn-dark">Look at Me!</a>
-      </div>
-    </aside>
-
-    <!-- Map -->
-    <section id="contact" class="map">
-      <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
-      <br/>
-      <small>
-        <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>
-      </small>
-    </section>
-
-    <!-- Footer -->
-    <footer>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-10 mx-auto text-center">
-            <h4>
-              <strong>Start Bootstrap</strong>
-            </h4>
-            <p>3481 Melrose Place
-              <br>Beverly Hills, CA 90210</p>
-            <ul class="list-unstyled">
-              <li>
-                <i class="fa fa-phone fa-fw"></i>
-                (123) 456-7890</li>
-              <li>
-                <i class="fa fa-envelope-o fa-fw"></i>
-                <a href="mailto:name@example.com">name@example.com</a>
-              </li>
-            </ul>
-            <br>
-            <ul class="list-inline">
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fa fa-facebook fa-fw fa-3x"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fa fa-twitter fa-fw fa-3x"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fa fa-dribbble fa-fw fa-3x"></i>
-                </a>
-              </li>
-            </ul>
-            <hr class="small">
-            <p class="text-muted">Copyright &copy; Your Website 2017</p>
-          </div>
+  <!-- Footer -->
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-10 mx-auto text-center">
+          <h4>
+            <strong>Tryn Maps</strong>
+          </h4>
+          <p>Code for America
+            <br>155 9th St, San Francisco, CA 94103</p>
+          <ul class="list-unstyled">
+              <i class="fa fa-envelope-o fa-fw"></i>
+              <a href="mailto:hello@trynmaps.com">hello@trynmaps.com</a>
+            </li>
+          </ul>
+          <br>
         </div>
       </div>
-      <a id="to-top" href="#top" class="btn btn-dark btn-lg js-scroll-trigger">
+    </div>
+    <a id="to-top" href="#top" class="btn btn-dark btn-lg js-scroll-trigger">
         <i class="fa fa-chevron-up fa-fw fa-1x"></i>
       </a>
-    </footer>
+  </footer>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+  <!-- Plugin JavaScript -->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-    <!-- Custom scripts for this template -->
-    <script src="js/stylish-portfolio.js"></script>
+  <!-- Custom scripts for this template -->
+  <script src="js/stylish-portfolio.js"></script>
 
-  </body>
+</body>
 
 </html>
