add code for sf link to homepage

--- a/index.html
+++ b/index.html
@@ -138,7 +138,11 @@
       <div class="row">
         <div class="col-lg-10 mx-auto text-center">
           <h4>
-            <strong>Tryn Maps</strong>
+            <strong>
+              <a href="http://codeforsanfrancisco.org/projects/Tryn-Maps">
+                Tryn Maps (Code for San Francisco project)
+              </a>
+            </strong>
           </h4>
           <p>Code for America
             <br>155 9th St, San Francisco, CA 94103</p>
