--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 
   <!-- Header -->
-  <header class="header" id="top">
+  <header class="header parallax" id="top">
     <div class="text-vertical-center">
     </div>
   </header>
@@ -34,123 +34,83 @@
   <!-- About -->
   <section id="about" class="about">
     <div class="container text-center">
-      <h2>Optimize the way transit is operated and planned</h2>
-      <p class="lead">Increase the mobility and quality of life of your customers. </p>
+      <h2>Optimize the way transit is planned and operated</h2>
+      <p class="lead">Improve your city's mobility and quality of life. </p>
     </div>
     <!-- /.container -->
   </section>
 
   <!-- Services -->
   <section id="services" class="services bg-primary text-white">
-    <div class="container">
+    <div class="header parallax service-image route-improvements"></div>
+    <div class="container text-center">
+      <h2>
+        Route Improvements
+      </h2>
+      <h4>
+        Route improvements are expensive, but so are the long studies that justify them. Tryn Maps lets you add improvements on a map and instantly see their impacts.
+      </h4>
+    </div>
+  </section>
 
-      <table cellpadding="10">
-        <tr>
-          <th>
-            <h2>Feature</h2>
-          </th>
-          <th>
-            <h2>Operations Use-Case</h2>
-            <p>Real-time visualizations provide more context and data to supervisors as to make quick and informed decisions.</p>
-          </th>
-          <th>
-            <h2>Planning Use-Case</h2>
-            <p>Visualizations based on real-time data provide the insights needed to deliver more impact at a lower cost.</p>
-          </th>
-        </tr>
-        <tr>
-          <th>
-            <h4>Visualize differences between scheduled and actual service</h4>
-          </th>
-          <th>
-            <p>Measure severity as to respond accordingly</p>
-            <p>Alert when large service-gaps arise</p>
-          </th>
-          <th>
-            <p>Adjust schedules to reflect reality</p>
-            <p>Measure which schedules performed best</p>
-          </th>
-        </tr>
-        <tr>
-          <th>
-            <h4>Visualize travel times between any two stops</h4>
-          </th>
-          <th>
-            <p>Alert when large connection times arise</p>
-            <p>Measure impact of service disruptions and respond accordingly</p>
-          </th>
-          <th>
-            <p>Simulate commutes from first to last stop</p>
-            <p>Review recovery from service disruptions</p>
-          </th>
-        </tr>
-        <tr>
-          <th>
-            <h4>Visualize vehicle travel speeds</h4>
-          </th>
-          <th>
-            <p>Alert when vehicle is moving unusually slowly</p>
-            <p>Deploy traffic enforcement to bottlenecks in transit-priority lanes</p>
-          </th>
-          <th>
-            <p>Identify bottlenecks and determine extensiveness of measures</p>
-            <p>Review effectiveness of transit priority measures</p>
-          </th>
-        </tr>
-        <tr>
-          <th />
-          <th>
-            <h2>With Fare-System Integration</h2>
-          </th>
-          <th />
-        </tr>
-        <tr>
-          <th>
-            <h4>Visualize crowding levels</h4>
-          </th>
-          <th>
-            <p>Alert when a vehicle is too crowded</p>
-            <p>Alert when an unusually large number of boardings takes place</p>
-          </th>
-          <th>
-            <p>Adjust schedules as to closely match demand</p>
-            <p>Determine where to short-turn vehicles</p>
-          </th>
-        </tr>
-        <tr>
-          <th>
-            <h4>Visualize end-to-end trips</h4>
-          </th>
-          <th>
-            <p>Set alerts for popular connection points</p>
-          </th>
-          <th>
-            <p>Quantify impact of new or modified routes on overall crowding levels and individual travel times</p>
-          </th>
-        </tr>
-      </table>
-    </Section>
-  <!-- Call to Action <a href="#" class="btn btn-lg btn-light">Click Me!</a> -->
+  <section id="services" class="services bg-primary text-white">
+    <div class="header parallax service-image new-routes"></div>
+    <div class="container text-center">
+      <h2>
+        New Routes
+      </h2>
+      <h4>
+        A good transit system isn’t just measured by its coverage, it’s by how well it moves people to where they need to be. With everyone having different travel patterns, justifying new routes is a long and tedious process. Tryn Maps does it instantly.
+      </h4>
+    </div>
+  </section>
+
+  <section id="services" class="services bg-primary text-white">
+    <div class="parallax service-image crowding"></div>
+    <div class="container text-center">
+      <h2>
+        Crowding
+      </h2>
+      <h4>
+        There’s a huge imbalance between peak and off-peak crowding. With Tryn Maps you can target your riders to shift their commutes and instantly see the results.
+      </h4>
+    </div>
+  </section>
+
+  <section id="services" class="services bg-primary text-white">
+    <div class="parallax service-image disruptions"></div>
+    <div class="container text-center">
+      <h2>
+        Disruptions
+      </h2>
+      <h4>
+        Disruptions happen. But an optimal response can make it seem like they never happened. Tryn Maps shows you the impact of your planned response and makes suggestions in real-time.
+      </h4>
+    </div>
+  </section>
+
+ <!-- Call to action -->
+ <footer>
+  <section>
+    <div class="container text-center">
+      <h2>Let's talk transit.</h2>
+      <p class="lead">Contact us at <a href="mailto:hello@trynmaps.com">hello@trynmaps.com</a></p>
+    </div>
+    <!-- /.container -->
+  </section>
 
   <!-- Footer -->
-  <footer>
-    <div class="container">
+
+    <div>
       <div class="row">
         <div class="col-lg-10 mx-auto text-center">
-          <h4>
-            <strong>
-              <a href="http://codeforsanfrancisco.org/projects/Tryn-Maps">
-                Tryn Maps (Code for San Francisco project)
-              </a>
-            </strong>
-          </h4>
           <p>Code for America
             <br>155 9th St, San Francisco, CA 94103</p>
-          <ul class="list-unstyled">
+            <!-- <ul class="list-unstyled">
               <i class="fa fa-envelope-o fa-fw"></i>
               <a href="mailto:hello@trynmaps.com">hello@trynmaps.com</a>
             </li>
-          </ul>
+          </ul> -->
           <br>
         </div>
       </div>
@@ -158,8 +118,7 @@
     <a id="to-top" href="#top" class="btn btn-dark btn-lg js-scroll-trigger">
         <i class="fa fa-chevron-up fa-fw fa-1x"></i>
       </a>
-  </footer>
-
+    </footer>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
