add extensions to new routes section

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="header parallax service-image new-routes"></div>
     <div class="container text-center">
       <h2>
-        New Routes
+        New Routes & Extensions
       </h2>
       <h4>
         A good transit system isn’t just measured by its coverage, it’s by how well it moves people to where they need to be. With everyone having different travel patterns, justifying new routes is a long and tedious process. Tryn Maps does it instantly.
