--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   <!-- About -->
   <section id="about" class="about">
     <div class="container text-center">
-      <h2>Optimize the way transit is planned and operated</h2>
-      <p class="lead">Improve your city's mobility and quality of life. </p>
+      <h2>Our goal is to improve public transit by engaging residents with transit planning in their communities.</h2>
+      <p class="lead">We plan to do this by openly sharing detailed metrics and proposed projects. </p>
     </div>
     <!-- /.container -->
   </section>
@@ -45,10 +45,10 @@
     <div class="header parallax service-image route-improvements"></div>
     <div class="container text-center">
       <h2>
-        Route Improvements
+        API
       </h2>
       <h4>
-        Route improvements are expensive, but so are the long studies that justify them. Tryn Maps lets you add improvements on a map and instantly see their impacts.
+        Access speed and reliability metrics for routes using our GraphQL API.
       </h4>
     </div>
   </section>
@@ -57,10 +57,10 @@
     <div class="header parallax service-image new-routes"></div>
     <div class="container text-center">
       <h2>
-        New Routes & Extensions
+        Visualize
       </h2>
       <h4>
-        A good transit system isn’t just measured by its coverage, it’s by how well it moves people to where they need to be. With everyone having different travel patterns, justifying new routes is a long and tedious process. Tryn Maps does it instantly.
+        Visualize speed and reliability metrics for routes in our web-app.
       </h4>
     </div>
   </section>
@@ -69,10 +69,10 @@
     <div class="parallax service-image crowding"></div>
     <div class="container text-center">
       <h2>
-        Crowding
+        Engage
       </h2>
       <h4>
-        There’s a huge imbalance between peak and off-peak crowding. With Tryn Maps you can target your riders to shift their commutes and instantly see the results.
+        See Muni’s proposed projects on a map, comment on them, learn about the thoughts of other stakeholders, contact legislators, and become aware of community meetings.  
       </h4>
     </div>
   </section>
@@ -81,10 +81,22 @@
     <div class="parallax service-image disruptions"></div>
     <div class="container text-center">
       <h2>
-        Disruptions
+        Trips
       </h2>
       <h4>
-        Disruptions happen. But an optimal response can make it seem like they never happened. Tryn Maps shows you the impact of your planned response and makes suggestions in real-time.
+        Enter your trips to learn how proposed projects could impact your commute and transit use.  
+      </h4>
+    </div>
+  </section>
+
+  <section id="services" class="services bg-primary text-white">
+    <div class="parallax service-image disruptions"></div>
+    <div class="container text-center">
+      <h2>
+        Optimize
+      </h2>
+      <h4>
+        Discover how taking more or less transit will affect your commute.  
       </h4>
     </div>
   </section>
@@ -93,8 +105,8 @@
  <footer>
   <section>
     <div class="container text-center">
-      <h2>Let's talk transit.</h2>
-      <p class="lead">Contact us at <a href="mailto:hello@trynmaps.com">hello@trynmaps.com</a></p>
+      <h4>OpenTransit is a volunteer-run project that meets at the weekly Code for San Francisco meetup.</h4>
+      <p class="lead">Reach out at <a href="mailto:hello@opentransit.city">hello@opentransit.city</a></p>
     </div>
     <!-- /.container -->
   </section>
