Content and images update

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Tryn Maps</title>
+  <title>OpenTransit</title>
 
   <!-- Bootstrap Core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -60,7 +60,7 @@
         Visualize
       </h2>
       <h4>
-        Visualize speed and reliability metrics for routes in our web-app.
+        Visualize speed and reliability metrics for routes in our web-app (launching in early February).
       </h4>
     </div>
   </section>
@@ -90,7 +90,7 @@
   </section>
 
   <section id="services" class="services bg-primary text-white">
-    <div class="parallax service-image disruptions"></div>
+    <div class="parallax service-image optimize"></div>
     <div class="container text-center">
       <h2>
         Optimize
