disable parallax, fix right scroll issue, and replace caltrain with bart image

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 
   <!-- Header -->
-  <header class="header parallax" id="top">
+  <header class="header " id="top">
     <div class="text-vertical-center">
     </div>
   </header>
@@ -34,7 +34,7 @@
   <!-- About -->
   <section id="about" class="about">
     <div class="container text-center">
-      <h2>Our goal is to improve public transit by engaging residents with transit planning in their communities.</h2>
+      <h2>Our goal is to improve public transit by engaging people with transit planning in their communities.</h2>
       <p class="lead">We plan to do this by openly sharing detailed metrics and proposed projects. </p>
     </div>
     <!-- /.container -->
@@ -42,7 +42,7 @@
 
   <!-- Services -->
   <section id="services" class="services bg-primary text-white">
-    <div class="header parallax service-image route-improvements"></div>
+    <div class="header  service-image route-improvements"></div>
     <div class="container text-center">
       <h2>
         API
@@ -54,7 +54,7 @@
   </section>
 
   <section id="services" class="services bg-primary text-white">
-    <div class="header parallax service-image new-routes"></div>
+    <div class="header  service-image new-routes"></div>
     <div class="container text-center">
       <h2>
         Visualize
@@ -66,7 +66,7 @@
   </section>
 
   <section id="services" class="services bg-primary text-white">
-    <div class="parallax service-image crowding"></div>
+    <div class=" header service-image crowding"></div>
     <div class="container text-center">
       <h2>
         Engage
@@ -78,7 +78,7 @@
   </section>
 
   <section id="services" class="services bg-primary text-white">
-    <div class="parallax service-image disruptions"></div>
+    <div class=" header service-image disruptions"></div>
     <div class="container text-center">
       <h2>
         Trips
@@ -90,7 +90,7 @@
   </section>
 
   <section id="services" class="services bg-primary text-white">
-    <div class="parallax service-image optimize"></div>
+    <div class=" header service-image optimize"></div>
     <div class="container text-center">
       <h2>
         Optimize
