copy change - engage

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         Engage
       </h2>
       <h4>
-        See Muni’s proposed projects on a map, comment on them, learn about the thoughts of other stakeholders, contact legislators, and become aware of community meetings.  
+        See Muni’s proposed projects on a map, comment on them, learn about the thoughts of other stakeholders, reach out to elected officials, and engage with your community's transit planning.  
       </h4>
     </div>
   </section>
