copy change - trips

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         Trips
       </h2>
       <h4>
-        Enter your trips to learn how proposed projects could impact your commute and transit use.  
+        Enter your trips to learn how proposed projects could impact your commute and transit usage.  
       </h4>
     </div>
   </section>
