add mailchimp link

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
     <div class="container text-center">
       <h4>OpenTransit is a volunteer-run project that meets at the weekly Code for San Francisco meetup.</h4>
       <p class="lead">Reach out at <a href="mailto:hello@opentransit.city">hello@opentransit.city</a></p>
+      <p class="lead">Subscribe for monthly updates <a href="https://mailchi.mp/d5530c138199/opentransit">here</a></p>
     </div>
     <!-- /.container -->
   </section>
