update to use demo day slides and keep old photos in old_sections

--- a/index.html
+++ b/index.html
@@ -36,89 +36,39 @@
     <div class="container text-center">
       <h2>Our goal is to improve public transit by engaging people with transit planning in their communities.</h2>
       <p class="lead">We plan to do this by openly sharing detailed metrics and proposed projects. </p>
+      <br />
+      
     </div>
     <!-- /.container -->
   </section>
 
-  <!-- Services -->
-  <section id="services" class="services bg-primary text-white">
-    <div class="header  service-image route-improvements"></div>
+  <section class="bg-primary">
     <div class="container text-center">
-      <h2>
-        API
-      </h2>
-      <h4>
-        Access speed and reliability metrics for routes using our GraphQL API.
-      </h4>
+      <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRMC3xV5WzCMkt3FJ8QNozWcR39NuTxLiCbcbnJelfFhsaEWWoTaK7hMWwZGLsXds6aYJzFKeCr2PLn/embed?start=true&loop=false&delayms=10000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
     </div>
   </section>
 
-  <section id="services" class="services bg-primary text-white">
-    <div class="header  service-image new-routes"></div>
-    <div class="container text-center">
-      <h2>
-        Visualize
-      </h2>
-      <h4>
-        Visualize speed and reliability metrics for routes in our web-app (launching in early February).
-      </h4>
-    </div>
-  </section>
 
-  <section id="services" class="services bg-primary text-white">
-    <div class=" header service-image crowding"></div>
-    <div class="container text-center">
-      <h2>
-        Engage
-      </h2>
-      <h4>
-        See Muni’s proposed projects on a map, comment on them, learn about the thoughts of other stakeholders, reach out to elected officials, and engage with your community's transit planning.  
-      </h4>
-    </div>
-  </section>
-
-  <section id="services" class="services bg-primary text-white">
-    <div class=" header service-image disruptions"></div>
-    <div class="container text-center">
-      <h2>
-        Trips
-      </h2>
-      <h4>
-        Enter your trips to learn how proposed projects could impact your commute and transit usage.  
-      </h4>
-    </div>
-  </section>
-
-  <section id="services" class="services bg-primary text-white">
-    <div class=" header service-image optimize"></div>
-    <div class="container text-center">
-      <h2>
-        Optimize
-      </h2>
-      <h4>
-        Discover how taking more or less transit will affect your commute.  
-      </h4>
-    </div>
-  </section>
 
  <!-- Call to action -->
  <footer>
   <section>
     <div class="container text-center">
-      <h4>OpenTransit is a volunteer-run project that meets at the weekly Code for San Francisco meetup.</h4>
+      <h4>Interested? Talk to us at the weekly Code for San Francisco meetup.</h4>
       <p class="lead">Reach out at <a href="mailto:hello@opentransit.city">hello@opentransit.city</a></p>
-      <p class="lead">Subscribe for monthly updates <a href="https://mailchi.mp/d5530c138199/opentransit">here</a></p>
+      <p class="lead">Subscribe for product updates <a href="https://mailchi.mp/d5530c138199/opentransit">here</a></p>
     </div>
     <!-- /.container -->
   </section>
+
 
   <!-- Footer -->
 
     <div>
       <div class="row">
         <div class="col-lg-10 mx-auto text-center">
-          <p>Code for America
-            <br>155 9th St, San Francisco, CA 94103</p>
+          <p>
+            <br></p>
             <!-- <ul class="list-unstyled">
               <i class="fa fa-envelope-o fa-fw"></i>
               <a href="mailto:hello@trynmaps.com">hello@trynmaps.com</a>
