add link to prod and to our github

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <h2>Our goal is to improve public transit by engaging people with transit planning in their communities.</h2>
       <p class="lead">We plan to do this by openly sharing detailed metrics and proposed projects. </p>
       <br />
+      <p class="lead"><a href="http://35.202.164.146/" target="_blank">Access the first version of OpenTransit here</a></p>
       
     </div>
     <!-- /.container -->
@@ -56,11 +57,13 @@
     <div class="container text-center">
       <h4>Interested? Talk to us at the weekly Code for San Francisco meetup.</h4>
       <p class="lead">Reach out at <a href="mailto:hello@opentransit.city">hello@opentransit.city</a></p>
-      <p class="lead">Subscribe for product updates <a href="https://mailchi.mp/d5530c138199/opentransit">here</a></p>
+      <p class="lead">Subscribe for product updates <a href="https://mailchi.mp/d5530c138199/opentransit" target="_blank">here</a></p>
+      <br />
+      <p class="lead">OpenTransit is Open Source - <a href="https://github.com/trynmaps" target="_blank">star us on GitHub</a></p>
+      
     </div>
     <!-- /.container -->
   </section>
-
 
   <!-- Footer -->
 
