added link to c4sf slack team link

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
       <p class="lead">Subscribe for product updates <a href="https://mailchi.mp/d5530c138199/opentransit" target="_blank">here</a></p>
       <br />
       <p class="lead">OpenTransit is Open Source - <a href="https://github.com/trynmaps" target="_blank">star us on GitHub</a></p>
+      <p class="lead">Join <a href"http://c4sf.me/slack" target="_blank">Code for San Francisco</a> slack team and join #opentransit slack channel</p>
       
     </div>
     <!-- /.container -->
