Update metrics link

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="container text-center">
       <h2>Our goal is to empower riders and advocates to improve transit.</h2>
       <p class="lead">Take a look at our <a 
-        href="http://opentransit.herokuapp.com" target="_blank">
+        href="http://muni.opentransit.city" target="_blank">
         Metrics App,
       </a>
       <a
